--- a/index.html
+++ b/index.html
@@ -11,238 +11,9 @@
 
 	<title>Iniciando sua Aventura | O Avatar de Karsus</title>
 
-	<link rel="stylesheet" type="text/css" href="./styles/start.css">
-
-	<style type="text/css">
-	@font-face{
-		font-family:'Gamefont';
-		src:url('./assets/gameFont1.ttf');
-		text-shadow: 2px 2px 2px 2px green;
-	}
-
-	*{
-		padding:0;
-		margin:0;
-	}
-
-
-	.tela {
-		min-height:100vh;
-	}
-
-	#identificação{
-		background-color:black;
-		color:white;
-		display:flex;
-		flex-direction:column;
-		justify-content:center;
-		align-items:center;
-	}
-
-	#identificação h1, h3{
-		font-size: 1.5vw;
-
-	}
-
-	#identificação form{
-		display:flex;
-		flex-direction:column;
-	}
-
-		#identificação button{
-			color:white;
-			text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-		}
-
-	/* TELA INICIAL DE PRESS START */
-	#telaInicial{
-		display:none;
-		background-image:url('./img/startScreen.jpg');
-		background-size:cover;
-		background-position:center;
-		background-repeat: no-repeat;
-		justify-content:space-between;
-
-		flex-direction:column;
-		align-items:center;
-	}
-
-	#telaInicial div{
-		text-align:center;
-	}
-
-	#telaInicial img{
-		margin-top:5vw;
-		width:50vw;
-		background-color:rgba(0,0,0,0.0);
-		border-radius:0;
-		padding:0 ;
-
-	}
-
-	.startButton{
-		background:none;
-		border:none;
-		color:white;
-		text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-		padding: 5vw;
-	}
-	.startButton{
-		cursor:auto;
-	}
-
-	/* TELA INICIAL DE INTRODUÇÃO */
-	#introducao{
-		display:none;
-		background-image:url('./img/introImgs/toril.jpg');
-		background-size:cover;
-		background-position:center;
-		background-repeat: no-repeat;
-		background-color:black;
-		flex-direction:column;
-		justify-content:space-between;
-		align-items:center;
-	}
-
-	.textCase{
-		margin-top:5vh;
-		width:100%;
-		height:100%;
-		position:bottom;
-		align-items:center;
-
-		display:flex;
-		justify-content:space-around;
-		
-	}
-
-	.textBox{
-		min-width:100%;
-		max-width:100%;
-		min-height:15vw;
-		font-size:13px;
-	}
-
-	.telaIntrodução{
-		min-height:60%;
-		align-items:center;
-		display:flex;
-		justify-content:space-around;
-	}
-
-	.imgIntro{
-		width:80%;
-		border-radius:50px;
-	}
-
-
-
-
-
-	#escolhaPersonagem{
-		display:none;
-		flex-direction:column;
-		align-items:center;
-		background-image:url('./img/introImgs/charSelect.jpg');
-		background-size:cover;
-		background-repeat: no-repeat;
-
-	}
-
+	<link rel="stylesheet" type="text/css" href="./styles/style.css">
 
 	
-
-	.caixaPersonagem{
-		display:flex;
-		justify-content:space-between;
-		align-items:center;
-		
-	}
-
-	.caixaPersonagem div{
-		text-align:center;
-		margin: 0 20vw;
-	}
-
-	.caixaPersonagem table{
-		margin: 0 5vw;
-	}
-
-	
-
-	.escolhendoChar{
-		display:flex;
-		justify-content:center;
-
-	}
-
-	.personagem{
-		display:flex;
-		
-	}
-	.card{
-		height:40vw;
-		width:60vw;
-		display:flex;
-		flex-direction:column;
-		align-items:center;
-		border-right:solid 3px black;
-	}
-
-	.card h1{
-		font-size: 15px;
-
-	}
-
-	.card p{
-		font-size: 10px;
-		text-align:center;
-	}
-
-	#imgChar{
-		width: 180px !important;
-		border: 7px solid green;
-		border-radius: 100%;
-	}
-
-	#imgChar2{
-		width: 180px !important;
-		border: 7px solid blue;
-		border-radius: 100%;
-	}
-
-	#imgChar3{
-		width: 180px !important;
-		border: 7px solid red;
-		border-radius: 100%;
-	}
-
-	.tabelaChar{
-		
-		color:white;
-		text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-		float:left;
-		position:static !important;
-		align-items:center;
-	}
-
-	.botaoChar button{
-		color:white;
-		text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-	}
-
-
-
-	.zion{
-		display:none;
-	}
-
-	.abigail{
-		display:none;
-	}
-
-	</style>
-
 </head>
 <body>
 	<div id="identificação" class="tela rpgui-content">
@@ -471,207 +242,7 @@
 
 	</div>
 
-<script type="text/javascript">
-
-	var listaChar = ['electra','abigail','zion'];
-	
-	if(window.localStorage.getItem('nome') != undefined){
-			document.getElementById('identificação').style.display = 'none';
-			telaInicial();
-		} else{
-			document.getElementById('identificação').style.display = 'flex';
-		}
-
-	var textoCont = 0;
-
-	var textoIntrodução1 = 'Seja bem vindo ao planeta Toril, '+ window.localStorage.getItem('nome')+'. Nós, habitantes desse universo estamos sofrendo bastante. Eu, criador deste universo, prevejo uma crise eminente gerada pela ganância de um homem. Esse ser está tentando mexer com o tecido mágico que compõe toda a energia vital dos seres vivos de nosso universo.';
-
-	var textoIntrodução2 = 'Este homem é um Archimago, e deseja utilizar todo o conhecimento escondido na cidade de Netheril para roubar os poderes dos deuses e se tornar o mago mais poderoso do mundo.'
-	//var textoIntrodução2 = 'Pactos podem ocorrer por necessidade, fome de conhecimento ou por poderes herdados hereditariamente.';
-
-	var textoIntrodução3 = 'Para combater esse ser maligno convoquei-lhe e selecionei 3 bruxos altamente poderosos para que sejam guiados por você.';
-	//var textoIntrodução3 = 'Os pactos são feitos juntamente com entidades extremamente poderosas denominadas Patronos. Nesse pacto elas concedem um pouco de seu poder e sabedoria em troca de respeito e servitude eterna.';
-	var textoIntrodução4 = window.localStorage.getItem('nome')+ ', eu clamo a ti que escolha seu bruxo preferido e acabe com as atrocidades que virão!';
-
-	var textoIntrodução5 = "Não se preocupe! Antes da nossa aventura começar eu vou te levar ao deus Patrono dos Bruxos, N'Zoth, e lá todas as suas dúvidas sobre este mundo serão sanadas. Muito obrigado pela ajuda,"+window.localStorage.getItem('nome')+'!'; 
-
-
-	var textoNzoth1 = 'Mortal imundo! O que faz no meu plano, ser inferior?'
-
-	var textoNzoth2 = 'Espere! Você deve ser o ser que o criador deste universo patético enviou para parar os planos malignos de Karsus, não é mesmo?'
-	var textoNzoth3 = 'Seu nome é '+ window.localStorage.getItem('nome')+ ', se eu não me engano. Quer dizer, EU NUNCA ME ENGANO! HAHAHAH!'
-
-	var textoNzoth4 = 'Então, ser pútrido de abjeta fedentida, eu irei explicar os detalhes sobre o vasto mundo de Toril e cidade mágica de Netheril!';
-
-	var textoNzoth5 = 'Netheril é uma cidade flutuante que se situa no norte do continente de Faerûm.';
-
-	var textoNzoth6 = 'Nessa cidade existem hierarquias que são definidas pelas suas habilidades em magia, e vários magos prepotentes disputam em combates até chegar ao topo. O campeão permanente e dono da cidade é o Archimago Karsus.';
-
-	var textoNzoth7 = 'Karsus é um ser humano extremamente formidável, e está utilizando todo o ouro gerado pela cidade para criar um feitiço capaz de robar o poder dos deuses. Para manter a hierarquia firme ele promove batalhas de magia sazonalmente, e é aí que o seu papel se desenvolve.';
-	var textoNzoth8 = window.localStorage.getItem('nome')+', sua missão é se infiltrar neste torneio e derrotar o grande mago Karthus. Ao derrotá-lo. Você terá em seu arsenal 3 de meus lacaios bruxos mais devotos, e assim poderá pedir meu auxílio sempre quando necessário.'; 
-	var textoNzoth9 = 'A seguir escolha entre os bruxos Abigail, Zion e Electra. Os 3 são bruxos formidáveis e com sua ajuda poderão dar conta de qualquer serviço, mas cuidado, cada um carrega uma arma especial e característica diferente. Escolha Sabiamente!';
-
-
-	// BOTAO DE TROCA DE BRUXOS
-	function verBruxo(aparecer,ba,bb){
-		 document.querySelector(aparecer).style.display = 'flex';
-		document.querySelector(ba).style.display = 'none';
-		 document.querySelector(bb).style.display = 'none';
-	}
-
-	//BOTAO ESCOLHER PERSONAGEM
-	function escolherChar(){
-		var char = prompt('Escolha entre os bruxos 1, 2 ou 3! Você também pode digitar o nome deles')
-		if (char == 1){
-			window.localStorage.setItem('char', 'electra')
-			window.location.replace("etapa2.html")
-		}else  if (char == 2){
-			window.localStorage.setItem('char', 'abigail')
-			window.location.replace("etapa2.html")
-		} else  if (char == 3){
-			window.localStorage.setItem('char', 'zion')
-			window.location.replace("etapa2.html")
-		} else if(typeof char == 'string'){
-			  if(listaChar.includes(char.toLowerCase())){ 
-					window.localStorage.setItem('char',char.toLowerCase())
-					window.location.replace("etapa2.html");
-				} else alert('Você digitou errado! Por favor digite novamente o bruxo escolhido!')
-		} else{
-			alert('Você digitou errado! Por favor digite novamente o bruxo escolhido!')
-		}
-	}
-
-	function limparTexto(){
-		document.querySelector('#textoIntrodução').innerHTML = '';
-	}
-
-	function escreverDevagar(idElemento, intervalo, texto) {
-	let ts = texto.split('');
-	var d = document.getElementById(idElemento);
-	var intervalow = setInterval(()=>{
-		if(!ts.length){
-			clearInterval(intervalow)
-			setTimeout(()=>{d.innerHTML = ''; return next();}, 4000);
-		} else{
-			var char = ts.shift();
-			d.innerHTML += char;
-		}
-	}, intervalo);
-	
-}
-function next(){
-	textoCont++;
-	if (textoCont == 1){
-		escreverDevagar('textoIntrodução', 70, textoIntrodução2)
-	} else if (textoCont == 2){
-		escreverDevagar('textoIntrodução', 70, textoIntrodução3)
-	} else if (textoCont == 3){
-		escreverDevagar('textoIntrodução', 70,textoIntrodução4)
-	} else if (textoCont == 4){
-		escreverDevagar('textoIntrodução', 70,textoIntrodução5)
-	} else if (textoCont == 5){
-		pausarAudios('#introdução');
-		loopMusica('#nzoth');
-		document.getElementById('introducao').style.backgroundImage = "url('./img/introImgs/nzoth.jpg')";
-		escreverDevagar('textoIntrodução', 70,textoNzoth1);
-	} else if (textoCont == 6){
-		escreverDevagar('textoIntrodução', 70,textoNzoth2)
-	} else if (textoCont == 7){
-		escreverDevagar('textoIntrodução', 70,textoNzoth3)
-	} else if (textoCont == 8){
-		escreverDevagar('textoIntrodução', 70,textoNzoth4)
-	} else if (textoCont == 9){
-		escreverDevagar('textoIntrodução', 70,textoNzoth5)
-	} else if (textoCont == 10){
-		escreverDevagar('textoIntrodução', 70,textoNzoth6)
-	} else if (textoCont == 11){
-		escreverDevagar('textoIntrodução', 70,textoNzoth7)
-	} else if (textoCont == 12){
-		escreverDevagar('textoIntrodução', 70,textoNzoth8)
-	} else if (textoCont == 13){
-		escreverDevagar('textoIntrodução', 70,textoNzoth9)
-	} else if (textoCont == 14){
-		escolhaPersonagem();
-	}
-}
-
-	function loopMusica(id){
-		document.querySelector(id).loop = 'true';
-		document.querySelector(id).play();
-	}
-
-	function pausarAudios(id){
-		document.querySelector(id).pause();
-	}
-
-	
-	function guardarNome(){
-
-		let n = document.getElementById('nomeJogador').value;
-		if(n.length == 0){ 
-			console.log('Você não escreveu nada')
-		} else {
-			window.localStorage.setItem('nome', n); 
-			document.getElementById('identificação').style.display = 'none';
-			telaInicial();
-		}
-		
-	}
-
-	function piscarElemento(elemento, tempo){
-		setInterval(()=>{ elemento.hidden = !elemento.hidden }, tempo);
-	}
-
-
-	function proximoDiv(ant, prox){
-		document.getElementById(ant).style.display = 'none';
-		document.getElementById(prox).style.display = 'flex';
-
-	}
-
-
-	function telaInicial(){
-		document.querySelector('.startButton').hidden = true;
-		document.getElementById('telaInicial').style.display = 'flex';
-		// Música de Abertura
-		loopMusica('#abertura');
-		// Escurecimento Tela CSS JS
-		let contShadow = 0;
- 		let tela = document.getElementById('telaInicial');
- 		var intervalo = setInterval(()=>{
- 		if (contShadow >= 0.8){
- 		tela.style.boxShadow = 'inset 0 0 0 1000px rgba(0,0,0,'+contShadow+')';
- 		clearInterval(intervalo);
- 			} else {
- 		tela.style.boxShadow = 'inset 0 0 0 1000px rgba(0,0,0,'+contShadow+')';
- 		contShadow += 0.01;
- 		}}, 70);
-	
- 		setTimeout(()=>{
- 				piscarElemento(document.querySelector('.startButton'), 400);
- 		},2000);
-	}
-
-	function introducao(){
-
-		pausarAudios('#abertura');
-		loopMusica('#introdução');
-		proximoDiv('telaInicial', 'introducao');
-		escreverDevagar('textoIntrodução', 50, textoIntrodução1);			
-		
-	}
-
-	function escolhaPersonagem(){
-		pausarAudios('#nzoth');
-		loopMusica('#escolheChar');
-		proximoDiv('introducao','escolhaPersonagem');
-
-
-	}
-
-
-	
-
+<script src="./js_components/introduction.js" type="text/javascript">
 </script>
 
 </body>
