--- a/etapa2.html
+++ b/etapa2.html
@@ -6,13 +6,14 @@
   	<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png"> 
   	<link href="./dist/rpgui.css" rel="stylesheet" type="text/css">
 	
+	
 
 	<title>Jogar | O Avatar de Karsus</title>
 
 	<link rel="stylesheet" type="text/css" href="./styles/midgame.css">
 </head>
 
-<body>
+
 	<div class="rpgui-content tela inicioTorneio">
 
 	    <div class="textoBatalha">
@@ -47,11 +48,11 @@
 		<div style='position: static; height:110px; width:800px ;' class="rpgui-container framed textBox">
 			 <p id="comentarios">Clique no botão Atacar e escolha seu golpe!</p> 
 		</div>
-	</div>
-		 
-
+	  </div>
 	</div>
 
+	
+	<script src="./js_components/globalFunctions.js"></script>
 	<script src="./js_components/midgame.js"></script>
 	<script src="./dist/rpgui.js"></script>
 </body>
