--- a/etapa3.html
+++ b/etapa3.html
@@ -27,7 +27,7 @@
 				<p style='text-align: center;' id='hpEnemy'></p>
 			</div>
 
-			<script> document.write('<img id="enemyImg" src="./img/7 - kael.gif" alt="Gizem">') </script>
+			<script> document.write('<img id="enemyImg" src="./img/gizem3.gif" alt="KaelThas">') </script>
 			</div>
 		</div>
 		<div style="display: flex; ">
