--- a/etapa2.html
+++ b/etapa2.html
@@ -29,7 +29,7 @@
 				<p style='text-align: center;' id='hpEnemy'></p>
 			</div>
 
-			<script> document.write('<img id="enemyImg" src="./img/gizem2.gif" alt="Gizem">') </script>
+			<script> document.write('<img id="enemyImg" src="./img/gizem.gif" alt="Gizem">') </script>
 			</div>
 		</div>
 		
@@ -50,7 +50,7 @@
 	  </div>
 	</div>
 	
-	<audio class="audio" id="escolheChar" src="./assets/musicas/batalha2.mp3"></audio>
+	<audio class="audio" id="batalhaSong" src="./assets/musicas/batalha2.mp3"></audio>
 
 	<script src="./js_components/midgame.js"></script>
 	<script src="./dist/rpgui.js"></script>
