--- a/etapa3.html
+++ b/etapa3.html
@@ -46,6 +46,8 @@
 	  </div>
 	</div>
 
+	<audio class="audio" id="batalhaSong" src="./assets/musicas/batalha3.mp3"></audio>
+
     <script src="./js_components/midgame2.js"></script>
 	<script src="./dist/rpgui.js"></script>
 </body>
