--- a/finalBattle.html
+++ b/finalBattle.html
@@ -45,7 +45,7 @@
 		</div>
 	  </div>
 	</div>
-
+    <audio class="audio" id="batalhaSong" src="./assets/musicas/karsus.mp3"></audio>
     <script src="./js_components/finalBattle.js"></script>
 	<script src="./dist/rpgui.js"></script>
 </body>
