--- a/etapa2.html
+++ b/etapa2.html
@@ -29,7 +29,7 @@
 				<p style='text-align: center;' id='hpEnemy'></p>
 			</div>
 
-			<script> document.write('<img id="enemyImg" src="./img/gizem.gif" alt="Gizem">') </script>
+			<script> document.write('<img id="enemyImg2" src="./img/gizem.gif" alt="Gizem">') </script>
 			</div>
 		</div>
 		
